# dwarfsql

./: .gitattributes  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: versioninfo.cmake
prompts/: dwarfsql_agent.md
scripts/: embed_prompt.py
src/: dwarf_session.cpp  dwarf_tables.cpp
src/cli/: main.cpp
src/common/: agent_settings.hpp  ai_agent.cpp  ai_agent.hpp  dwarfsql_agent_prompt.hpp  dwarfsql_commands.hpp  http_server.cpp  http_server.hpp  mcp_server.cpp  mcp_server.hpp
src/include/dwarfsql/: dwarf_session.hpp  dwarf_tables.hpp  dwarfsql.hpp
tests/: CMakeLists.txt
